Fix mobile layout on iOS Safari

--- a/public/global.css
+++ b/public/global.css
@@ -135,6 +135,10 @@ select {
   margin: 0;
 }
 
+select {
+  -webkit-appearance: none;
+}
+
 button:focus,
 a:focus,
 input:focus,
